base/hasura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hasura
  name: hasura
  namespace: 5stack
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: 5stack-hasura
                operator: In
                values:
                  - "true"
      containers:
        - image: hasura/graphql-engine:v2.50.3-ce.cli-migrations-v3
          name: hasura
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app
              name: workdir
      volumes:
        - emptyDir: {}
          name: workdir
        - name: timescaledb-secrets
          secret:
            secretName: timescaledb-secrets
